--- a/bap/api/v0.9.6/experimental/ocamldoc/style.css
+++ b/bap/api/v0.9.6/experimental/ocamldoc/style.css
@@ -1,98 +1,109 @@
-/* A style for ocamldoc. Daniel C. Buenzli */
-
-/* Reset a few things. */
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,
-a,abbr,acronym,address,big,cite,code,del,dfn,em,font,img,ins,kbd,q,s,samp,
-small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,
-form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td
-{ margin: 0; padding: 0; border: 0 none; outline: 0; font-size: 100%;
-  font-weight: inherit; font-style:inherit; font-family:inherit;
-  line-height: inherit; vertical-align: baseline; text-align:inherit;
-  color:inherit; background: transparent; }
-
-table { border-collapse: collapse; border-spacing: 0; }
-
-/* Basic page layout */
-
-body { font: normal 10pt/1.375em helvetica, arial, sans-serif; text-align:left;
-       margin: 1.375em 10%; min-width: 40ex; max-width: 72ex;
-       color: black; background: white /* url(line-height-22.gif) */; }
-
-b { font-weight: bold }
-em { font-style: italic }
-
-tt, code, pre { font-family: WorkAroundWebKitAndMozilla, monospace;
-                font-size: 1em; }
-pre code { font-size : inherit; }
-.codepre { margin-bottom:1.375em /* after code example we introduce space. */ }
-
-.superscript,.subscript
-{ font-size : 0.813em; line-height:0; margin-left:0.4ex;}
-.superscript { vertical-align: super; }
-.subscript { vertical-align: sub; }
-
-/* ocamldoc markup workaround hacks */
+table { font-size: 11pt; }
+.keyword { font-weight : bold ; color : #e74c3c }
+.keywordsign { color : #8e44ad }
+.superscript { font-size : 4 }
+.subscript { font-size : 4 }
+.comment { color : #27ae60 }
+.constructor { color : #c0392b }
+.type { color : #2980b9 }
+.string { color : #e67e22 }
+.warning { color : Red ; font-weight : bold }
+.info { margin-left : 3em; margin-right: 3em }
+.param_info { margin-top: 4px; margin-left : 3em; margin-right : 3em }
+.code { color : #465F91 ; }
+.typetable { border-style : hidden; font-size: 10.5pt }
+.paramstable { border-style : hidden ; padding: 5pt 5pt}
+tr { background-color : White }
+td.typefieldcomment { background-color : #FFFFFF ; font-size: 10pt ;}
+div.sig_block {margin-left: 2em}
+*:target { background: #f1c40f; border-radius:3px}
 
 
+a {color: #3498db;
+   text-decoration: none;
+   border-radius: 3px;}
 
-hr, hr + br, div + br, center + br, span + br, ul + br, ol + br, pre + br
-{ display: none } /* annoying */
+a:hover, a:hover code
+{
+ color:white;
+ background-color: #1abc9c;
+ -webkit-transition: all 0.15s linear;
+ transition: all 0.15s linear;
+}
 
-div.info + br { display:block}
+pre { margin-bottom: 4px;
+      font-family: monospace;
+    }
+pre.verbatim, pre.codepre { }
+.indextable {
+             background-color: #ecf0f1;
+             border-collapse: collapse;
+             border-radius:6px;
+             overflow:hidden;
+             /* margin-left:auto;  */
+             /* margin-right:auto; */
+            }
+.indextable td, .indextable th {
+    /* font-size: 12pt; */
+    background-color: #ecf0f1;
+    padding:4px;
+    padding-left:8px;
+    padding-right:8px;
+    min-width: 80px}
+.indextable td.module {
+    font-size: 13pt;
+    background-color: #dbdfe0;
+    padding-left:10px; }
+.indextable td.module a {color:#2c3e50;  }
+.indextable td.module a:hover { color: #1abc9c; background:none }
+.deprecated {color: #888; font-style: italic}
+.indextable tr td div.info { margin-left: 2px; margin-right: 2px }
+ul.indexlist { margin-left: 0; padding-left: 0;}
+ul.indexlist li { list-style-type: none ; margin-left: 0; padding-left: 0; }
 
-.codepre br + br { display: none }
-h1 + pre { margin-bottom:1.375em} /* Toplevel module description */
 
-/* Sections and document divisions */
-
-/* .navbar { margin-bottom: -1.375em } */
-h1 { font-weight: bold; font-size: 1.5em; /* margin-top:1.833em; */
-     margin-top:0.917em; padding-top:0.875em;
-     border-top-style:solid; border-width:1px; border-color:#AAA; }
-h2 { font-weight: bold; font-size: 1.313em; margin-top: 1.048em }
-h3 { font-weight: bold; font-size: 1.125em; margin-top: 1.222em }
-h3 { font-weight: bold; font-size: 1em; margin-top: 1.375em}
-h4 { font-style: italic;  }
-
-/* Used by OCaml's own library documentation. */
- h6 { font-weight: bold; font-size: 1.125em; margin-top: 1.222em }
- .h7 { font-weight: bold; font-size: 1em; margin-top: 1.375em }
-
-p { margin-top: 1.375em }
-pre { margin-top: 1.375em }
-.info { margin: 0.458em 0em -0.458em 2em;}/* Description of types values etc. */
-td .info { margin:0; padding:0; margin-left: 2em;} /* Description in indexes */
-
-ul, ol { margin-top:0.688em; padding-bottom:0.687em;
-	 list-style-position:outside}
-ul + p, ol + p { margin-top: 0em }
-ul { list-style-type: square }
+body{
+    font-family:  'Open Sans', Helvetica, Arial, sans-serif, Verdana; 
+    /* font-size: 1.1em; */
+    color: #2c3e50;
+    margin:0 auto;
+    max-width:900px;
+    font-size: 11pt;
+    padding: 5px;
+}
 
 
-/* h2 + ul, h3 + ul, p + ul { } */
-ul > li { margin-left: 1.375em; }
-ol > li { margin-left: 1.7em; }
-/* Links */
+.navbar { background-color: #2c3e50;
+          color:#ecf0f1;
+          text-align:right;
+          border-top-left-radius: 6px;
+          border-top-right-radius: 6px;
+          padding:0;
+          margin:8pt;
+          position:absolute;
+          top:0;
+        }
 
-a, a:link, a:visited, a:active, a:hover { color : #00B; text-decoration: none }
-a:hover { text-decoration : underline }
-*:target {background-color: #FFFF99;} /* anchor highlight */
+.navbar a { color:white }
+.navbar a:hover {color: #1abc9c; background:none}
 
-/* Code */
+h1 { background-color: #2c3e50;
+     color:white;
+     font-size : 20pt ;
+     text-align: center;
+     margin-top:0;
+     margin-bottom:20pt;
+     padding:15pt;
+     border-radius: 6px;
+     -webkit-font-smoothing: antialiased;
+   }
 
-.keyword { font-weight: bold; }
-.comment { color : red }
-.constructor { color : green }
-.string { color : brown }
-.warning { color : red ; font-weight : bold }
+h1 a { color:white }
+h1 a:hover {color: #1abc9c; background:none }
 
-/* Functors */
-
-.paramstable { border-style : hidden ; padding-bottom:1.375em}
-.paramstable code { margin-left: 1ex; margin-right: 1ex }
-.sig_block {margin-left: 1em}
-
-/* Images */
-
-img { margin-top: 1.375em; display:block }
-li img { margin-top: 0em; }
+h2 { 
+    font-size : 20pt ; margin-top: 20pt; margin-bottom: 2px ;padding: 2px;
+    border:0;
+    border-bottom:1px; border-style:solid; border-color:#2c3e50;
+}
+h3 { font-size : 16pt ; margin-top: 20pt; margin-bottom: 2px ;padding: 2px; }
