--- a/bap/api/master/Bap_primus.Std.Primus.Machine.Component.html
+++ b/bap/api/master/Bap_primus.Std.Primus.Machine.Component.html
@@ -78,7 +78,23 @@
 &nbsp;</div>
 <h1>Module type <a href="type_Bap_primus.Std.Primus.Machine.Component.html">Bap_primus.Std.Primus.Machine.Component</a></h1>
 
-<pre><span class="keyword">module type</span> Component = <code class="code">(</code><code class="code"><span class="constructor">Machine</span></code><code class="code"> : </code><code class="type"><a href="Bap_primus.Std.Primus.Machine.S.html">S</a></code><code class="code">) </code><code class="code"><span class="keyword">sig</span></code> <a href="Bap_primus.Std.Primus.Machine.Component.html">..</a> <code class="code"><span class="keyword">end</span></code></pre><table border="0" cellpadding="3" width="100%">
+<pre><span class="keyword">module type</span> Component = <code class="code">(</code><code class="code"><span class="constructor">Machine</span></code><code class="code"> : </code><code class="type"><a href="Bap_primus.Std.Primus.Machine.S.html">S</a></code><code class="code">) </code><code class="code"><span class="keyword">sig</span></code> <a href="Bap_primus.Std.Primus.Machine.Component.html">..</a> <code class="code"><span class="keyword">end</span></code></pre><div class="info modtype top">
+Machine component interface.
+<p>
+
+          A machine component is a functor, that is applied every time
+          the Machine is instantiated. The <code class="code">init</code> function is called
+          when the Machine computation is started (the order in which
+          components are initialized is not specified, but since all
+          components store their state in the machine it doesn't
+          matter).
+<p>
+
+          The <code class="code">init</code> function can perform any computation in the
+          machine monad. But usually, it registers event
+          observations.<br>
+</div>
+<table border="0" cellpadding="3" width="100%">
 <tr>
 <td align="left" valign="top" width="1%%"><b>Parameters: </b></td>
 <td>
@@ -93,4 +109,8 @@
 </tr>
 </table>
 <hr width="100%">
+
+<pre><span id="VALinit"><span class="keyword">val</span> init</span> : <code class="type">unit -> (unit, #<a href="Bap_primus.Std.Primus.Context.t-c.html">Primus.Context.t</a>) Machine.t</code></pre><div class="info ">
+<code class="code">init ()</code> component initialization function.<br>
+</div>
 </body></html>
